[project]
name="live-labs"
version="0.0.1"
readme="README.md"
requires-python=">=3.8"
license="Apache-2.0"
license-files=["LICENSE"]

dependencies = [
        "pydantic>=2,<3",
        "pydantic-yaml",
        "pyyaml~=6.0",
        "streamlit>=1.44,<2",
        "streamlit-autorefresh",
        "streamlit-extras",
        "streamlit-ace",
        "streamlit-bridge",
        "streamlit-javascript",
]

[project.optional-dependencies]
build = [
        "build",
]

[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]

[tool.setuptools.package-data]
live_labs = ["css/*.css", "js/*.js"]

[tool.ruff]
line-length = 120
target-version = "py310"

exclude = [
  "**/*.ipynb"
]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle (formatting errors)
  "F",    # pyflakes (logical errors, like unused imports)
  "B",    # bugbear (common Python gotchas)
  "I",    # isort (import sorting)
  "UP",   # pyupgrade (modernize Python syntax)
  "C4",   # comprehensions (bad comprehensions, dict/set/list comprehensions issues)
  "RET",  # flake8-return checks
  "T10",  # flake8-pdb (ban interactive debugger in real code)
  # "T20",  # flake8-print (ban print statements in real code)
  "SIM",  # flake8-simplify (simplify if-else, etc)
  "PTH",  # flake8-pathlib (encourage pathlib usage)
  "PYI",  # flake8-pyi
  "PL",   # pylint rules subset (e.g., overly complex functions)
  "RUF",  # Ruff-specific rules
  "ANN",  # Type annotations
  "ARG",  # Function arguments
  "FIX",  # Forbid common FIXME comments
]
ignore = [
  "ANN401", # Allow the use of the Any type
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true # suppress ANN401 for dynamically typed *args and **kwargs arguments.
mypy-init-return = true  # allow the omission of a return type hint for __init__ if at least one argument is annotated.
suppress-none-returning = true # allow the return type to implicitly be None.

[tool.ruff.lint.isort]
force-single-line = false
known-first-party = []
known-third-party = []

[tool.mypy]
strict = false
implicit_optional = true
follow_imports = "silent"
ignore_missing_imports = true
show_column_numbers = true
disable_error_code = ["no-untyped-call", "override", "misc", "import-untyped"]
